# henrietta-slit-guiding

./: .gitignore  DESIGN.md  LICENSE  README.md  pyproject.toml
src/henrietta_slit_guiding/: __init__.py  cli.py  config.py  findstars.py  headers.py  keypress.py  montage.py  plots.py  watch.py
src/henrietta_slit_guiding/data/: config_template.txt
tests/: test_cache_keypress.py  test_config.py  test_dipfit.py  test_watch.py
