[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "henrietta-slit-guiding"
version = "0.1.0"
description = "Live slit-guiding analysis for a two-star (target+comp) spectroscopic field on the Henrietta/Swope instrument."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Nick Konidaris", email = "nick.konidaris@gmail.com" }]
dependencies = [
    "astropy>=6",
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
]

[project.scripts]
henrietta-slit-guiding = "henrietta_slit_guiding.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/henrietta_slit_guiding"]

# Make sure the bundled binary BPM + the config template ride along in the wheel.
[tool.hatch.build.targets.wheel.force-include]
"src/henrietta_slit_guiding/data/bpm_25apr2026.fits" = "henrietta_slit_guiding/data/bpm_25apr2026.fits"
"src/henrietta_slit_guiding/data/config_template.txt" = "henrietta_slit_guiding/data/config_template.txt"
